syntax = "proto3";

package match;

option go_package = "match/proto;matchpb";

service MatchService {
  rpc Like(LikeRequest) returns (LikeResponse);
  rpc CheckMatch(CheckMatchRequest) returns (CheckMatchResponse);
  rpc GetCandidates(GetCandidatesRequest) returns (GetCandidatesResponse);
}

// ---------- Requests ----------

message LikeRequest {
  int64 from_user = 1;
  int64 to_user   = 2;
  bool is_like    = 3;
}

message CheckMatchRequest {
  int64 user1 = 1;
  int64 user2 = 2;
}

message GetCandidatesRequest {
  int64 telegram_id  = 1;
}

message LikeResponse {
  bool success = 1;
}

message CheckMatchResponse {
  bool match = 1;
}

message GetCandidatesResponse {
  repeated User candidates = 1;
}

message User {
  int64 id          = 1;
  int64 telegram_id = 2;
  string username   = 3;
  int32 age         = 4;
  string gender     = 5;
  string location   = 6;
  string description = 7;
  string photo_url  = 8;
  bool is_visible   = 9;
  string created_at = 10;
}
